app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */
body {
    background-color: #CECDFF;
    font-family: 'Times New Roman', Times, serif;
    margin: 0;
}

.navbar {
    background-color: white;
    border-bottom: 1px solid black;
    height: 48px;
}

.navbar>a {
    font-size: 22px;
    margin-left: 6px;
    margin-right: 10px;
}

.navbar>.linkbutton {
    margin-right: 6px;
    margin-top: 2px;
    padding: 8px;
    padding-right: 8px;
    padding-right: 15px;
    float: right;
    background-color: black;
    box-shadow: none;
}

.toadcan {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    z-index: 500;
    pointer-events: none;
}

.toadcan>img {
    width: 120px;
    rotate: 5deg;
    margin-top: 26px;
    margin-left: calc(100vw - (100vw - min(790px, 100vw)) / 2);
}

.navbar>.linkbutton:hover {

    background-color: rgb(32, 32, 32);
}

.navbar>.linkbutton:active {

    background-color: rgb(45, 43, 54);
}

.navbar>.linkbutton>img {
    height: 20px;
    transform: scale(1.6) translateY(1px);
    margin-left: 5px;
}

.centered {
    margin-left: 50%;
    transform: translateX(-50%);
    width: fit-content;
}

.linkbutton {
    padding: 15px;
    background-color: #4EE055;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 10px;
    font-size: 22px;
    box-shadow: 4px 4px black;
    border: solid 1px black;
}

.linkbutton:hover {
    background-color: #45c94c;
}

.linkbutton:active {
    background-color: #2c8b31;
}

.container {
    background-color: #F2FFEF;
    border: solid 2px black;
    width: 100%;
    max-width: 790px;
    padding: 40px;
    padding-top: 0;
    margin-top: 60px;
    margin-left: 50%;
    transform: translateX(-50%);
}

h1 {
    font-size: 49px;
    font-weight: normal;
    margin-bottom: 20px;
    margin-top: 20px;
    text-align: center;
}

p {
    font-size: 22px;
    line-height: 30px;
}

.subtitle {
    margin-top: 0;
    text-align: center;
}

a {
    text-decoration: none;
    color: #A100FF;
}

